EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------

==10/24/2008
Trevius: (Denivia) Possible fix for Advanced Theft of Life and Soul Thief for Necros and SKs
Trevius: (Denivia) Added AA Death Peace
Trevius: (Denivia) Blur of Axes and Vicious Strike fix for Berserkers
Trevius: (Denivia) Shield Block for Paladin/SK

==10/23/2008
Congdar: Lag reduction
Congdar: Clone NoDrop removal code to NoRent, Lore, NoTrade.  Optionally enabled in the db Variables table DisasbleNoDrop=1 DisableNoRent=true DisableLore=1 DisableNoTrade=1
Congdar: Bot code cleanup, method call reduction
Congdar: Bot DoubleAttack method is more like clients
Congdar: Remove AFK leveling with bots
Angelox: Added command '#Bot evac' for Druid bots 
Angelox: Added command '#Bot target calm' for Enchanter or Cleric bots 
Trevius: Removed the * 10 multiplier from the SE_ProcChance since it isn't needed
KLS: Zone appearance should update for players zoning.
KLS: Added command #modifynpcstat
KLS: Added quest::modifynpcstat(identifier, value)
KLS: Fix potential crash in MobProcess
KLS: Added decay option to CreateGroundObject
KLS: Added spelltype mez(2048) and spelltype in combat buff(1024).
KLS: Setting level for npcs will now update their spawn level too.
KLS: Fix potential memory leak in item link code.
KLS: Changed resists a bit.
KLS: Added rule: Spells:ResistPerLevelDiff(85) 8.5 resist points per level diff
KLS: Added rule: Combat:BaseHitChance(54.0)
KLS: Added rule: Combat:HitPerLevelDiff(145) 45% per level diff
KLS: Added rule: Combat:AgiHitFactor(0.015)
Derision: Added 'Repeatable' column to to tasks table. Default 1 (true).

Required SQL:

ALTER TABLE `tasks` ADD `repeatable` TINYINT( 1 ) UNSIGNED NOT NULL DEFAULT '1';

==10/22/2008
AndMetal: Fix for item links to prevent occasional zone crashes
AndMetal: Critical DOTs should now work correctly
AndMetal: Fixed sql/svn/125_aggrozone.sql to work with current command table schema